overflow solver, creatin about section

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,4 +1,6 @@
-.about{
-    min-height: 100vh;
-    min-width:100vw ;
+#about{
+    max-width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    transition:all 0.5s;
 }
