--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,13 +1,14 @@
 @import "../variables";
 header{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: $lightenColor;
     display: flex;
     justify-content: center;
     align-items: center;
     color: $darkColor;
     transition: all 0.5s;
+    overflow: hidden;
     .header-content{
         width: 80%;
         display: flex;
