--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -3,9 +3,10 @@
 nav {
   background-color: $lightenColor;
   transition: all 0.5s;
-  min-width: 100vw;
+  width: 100%;
   position: fixed;
   z-index: 1;
+  overflow: hidden;
 
   .menu-container {
     width: 80%;
